@@ -15,18 +15,18 @@
 
 	LICENCE
 	-------
-	This program is provided under MIT licence. You can find this complete
+	This program is provided under MIT licence.  You  can find this  complete
 	licence in /doc/LICENCE file
 
     
     FRENCH VERSION
     --------------
-    If you speak - or understand - French langage you can read the online
+    If you speak  - or understand -  French langage  you can read  the online
     French version : http://code.google.com/p/piwam/wiki/InstallerPiwam
 
 
 	1) Required Configuration
-	------------------------
+	-------------------------
 	
 		PHP >= 5.2.4
             mb_string module
@@ -39,22 +39,62 @@
 
 
 	2) How To Set Up Piwam
-	---------------------
+	----------------------
 
-		For those who got this release through SVN repository :
-			1- For those who are using Piwam thanks to SVN repository :
-			`  Fix config/ProjectConfiguration.class. Include the correct
+		A- For those who got this release through SVN repository :
+		
+			0- Symfony 1.2 is required
+			1- For  those  who are  using  Piwam thanks to  SVN  repository :
+			`  Fix  config/ProjectConfiguration.class.  Include  the  correct
 			   location of your sfCoreAutoload class
-			   /!\ If you got a packaged tarball, you don't need to do that.
-			2- Edit apps/front/config/settings.yml with your own settings
-			3- Edit config/databases.yml settings to be able to access to
-			   your own DB
-			4- Launch SQL file `doc/piwam-install.sql` 
-			5- Create a `cache` folder which is writable
+			   /!\ If you got a packaged tarball,  you don't need to do that.
+			2- Edit  apps/front/config/settings.yml  with  your own  settings 
+			3- Create a `cache` folder which is writable
+		
+					
+		B- For everyone, setting up a Virtual Host
+				
+			If  you  are  using  Piwam  on  your  webserver,  it is  strongly
+			recommended  to  configure  a  VirtualHost access.  For  example, 
+			"http://piwam.your-domain.com"  must refers to /path/to/piwam/web
+			directory.
 			
-		You are currently pleased to use only `dev` environment, otherwise
-		you have to set up another one (`prod` ?) by yourself.
-	
+			Here  is a sample of  Virtual Host configuration that you  should
+			put in your apache/conf/httpd.conf:
+			
+			-----------------------------------------------------------------
+			<VirtualHost *:80>
+				ServerName piwam.my-domain.com
+				DocumentRoot "/home/foobar/piwam/web"
+				DirectoryIndex index.php
+			  	<Directory "/home/foobar/piwam/web">
+			    	AllowOverride All
+			    	Allow from All
+			  	</Directory>
+			</VirtualHost>
+			-----------------------------------------------------------------
+			
+			If  you just want to try Piwam,  or if Piwam is just installed on
+			your  personnal  computer and not reachable by Internet,  you can
+			skip Virtual Host configuration.
+			
+
+		C- How To Access To Piwam
+		
+			Launch your browser  -  try to chose Firefox or Google Chrome ;-) 
+			If  a  Virtual Host  entry has been set up,  type  the configured 
+			address  (ie: http://piwam.your-domain.com).
+			Otherwise,  you  can  access  to  Piwam   through   address  like
+			http://your-server.com/piwam/web
+			
+			
+		D- For everyone, Installing from the web interface :
+		
+			Now  you have to  check that your configuration is OK  and finish
+			setting up some stuffs. Go to http://piwam.your-domain.com/install
+			and follow the instructions
+		
+		
 	
 	3) Troubleshooting
 	------------------
